--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "concurrently": "^8.2.2",
     "joi": "^17.12.2",
     "react": "^18.2.0",
@@ -41,7 +42,6 @@
     "postcss": "^8.4.40",
     "sass": "^1.72.0",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.2.2"
   }
 }
